examples/test/testpolicy17148.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17148
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key36: value10
      key20: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value25
          key46: value5
      podSelector:
        matchLabels:
          key16: value35
